--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 <body>
 
   <div class="conteneur">
-    <section class="header">
-        <h2>jond our community</h2>
-        <p class="pr-header">30-day. hassie-free money back guarantee</p>
-        <p> gain access to our libary of tutorials with expert code reviews. perfect for any developers who are  serious about honing their skills.</p>
-    </section>
-
-    <section class="menu">
-        <section class="prix">
-            <h3>monthly subscription</h3>
-            <p> <span> $29</span> per month</p>
-            <p>full acess for less than <span>$1</span>a day</p>
-            <button> sign Up </button>
-    </section>
-        <section class="bénefice">
-            <h3>Why Us</h3>
-            <ul>
-                <li>tutorials by industry expert</li>
-                <li>peer expert code reviews</li>
-                <li>coding exercises</li>
-                <li>acess to our github repos</li>
-                <li>community forum</li>
-                <li>flashcard decks</li>
-                <li>nex video every week</li>
-            </ul>
+        <section class="header">
+            <h2>jond our community</h2>
+            <p class="pr-header">30-day. hassie-free money back guarantee</p>
+            <p> gain access to our libary of tutorials with expert code reviews. perfect for any developers who are  serious about honing their skills.</p>
         </section>
 
-    </section>
+        <section class="menu">
+            <section class="prix">
+                <h3>monthly subscription</h3>
+                <p> <span> $29</span> per month</p>
+                <p>full acess for less than $1 a day</p>
+                <button> sign Up </button>
+            </section>
+            <section class="bénefice">
+                <h3>Why Us</h3>
+                <ul>
+                    <li>tutorials by industry expert</li>
+                    <li>peer expert code reviews</li>
+                    <li>coding exercises</li>
+                    <li>acess to our github repos</li>
+                    <li>community forum</li>
+                    <li>flashcard decks</li>
+                    <li>nex video every week</li>
+                </ul>
+            </section>
+        </section>
 
-  </div>
+
+    </div>
   
  
 </body>
